--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the Microposts controller here.
+// Place all the styles related to the Static controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.f1{
+    bottom: 15px;
+}
