--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,14 @@
   <%= render 'layouts/header' %>
 
   <div class="container">
+    <% flash.each do |state,messages| %>
+      <%= content_tag(:div,messages, class: "alert alert-#{state}") %>
+      <% end %>
       <div class="container">
         <%= yield %>
       </div> 
       <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
   </body>
   
 </html>
