--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,27 @@
 <% provide(:title,"Sign up") %>
 <h1>SIGN UP</h1>
-<p></p>
+
+<div class="row">
+    <div class="col-md-6 col-md-offset-3" >
+        <%= form_for(@user,url: signup_path) do |f| %>
+            <%= render 'shared/error_messages' %>
+
+            <%= f.label :名前 %>
+            <%= f.text_field :name, class: 'form-control' %>
+
+            <%= f.label :email %>
+            <%= f.email_field :email, class: 'form-control' %>
+        
+            <!--<label for="user_email">Email</label> -->
+            <!-- <input id="user_email" name="user[email]" type="email" /> -->
+            
+            <%= f.label :password %>
+            <%= f.password_field :password,class: 'form-control'%>
+
+            <%= f.label :password_confirmation, "Confirmation" %>
+            <%= f.password_field :password_confirmation, class: 'form-control'%>
+
+            <%= f.submit "新規作成", class: "btn btn-primary"%>
+        <% end %>
+    </div>
+</div>
